# workload-governor

./: CHANGELOG.md  PR_DESCRIPTION.md  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.json
.github/workflows/: backend-integration.yml  ci.yml  contract-ci.yml  e2e.yml  frontend-ci.yml  helm-release.yml
backend/: package.json
backend/src/: HorizonError.ts  HorizonService.ts
backend/src/__tests__/: HorizonService.test.ts
docs/: contributing.md  contributor-guide.md
docs/helm-charts/: index.yaml
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/app/: animations.css
frontend/src/: App.tsx  app.css  main.tsx  test-setup.ts
frontend/src/components/: ActivityFeed.tsx  (+5 more)
fuzz/: Cargo.toml
fuzz/corpus/fuzz_apply/: seed_1  seed_42
fuzz/corpus/fuzz_assign/: seed_no_apply  seed_with_apply
fuzz/fuzz_targets/: fuzz_apply.rs  fuzz_assign.rs  fuzz_batch_apply.rs
helm/vesting-backend/: Chart.yaml  README.md  values.yaml
infra/: BRANCH-CLOUDWATCH.md  BRANCH-ECS-SECRETS.md
scripts/: mutation-report.js
src/: app.ts  cache.ts  db.ts  github.ts  horizon.ts  index.ts  lib.rs  soroban.ts  test.rs
src/middleware/: api-key-auth.ts  rate-limit.ts  validation.ts
src/routes/: admin.ts  api-keys.ts  contributors.ts  issues.ts  transactions.ts  webhooks.ts
tests/api/: api-key-auth.test.ts  transactions.test.ts  webhooks.test.ts
tests/e2e/: apply-flow.spec.ts  gauge-increment.spec.ts  global-cap.spec.ts  maintainer-flow.spec.ts  msw-handlers.ts  types.ts
tests/unit/: useWallet.test.tsx
(+19 files in other folders)
